--- a/src/components/ListEmployeeStyles.module.css
+++ b/src/components/ListEmployeeStyles.module.css
@@ -10,11 +10,51 @@
 
 }
 .table{
- table-layout: fixed;
+  table-layout: fixed;
   width: 100%;
   border-collapse: collapse;
   border: 3px solid darkslategray;
 }
+.table td, .table th{
+    padding: 12px 15px;
+    border: 1px solid #ddd;
+    text-align: center;
+    font-size: 16px;
+}
+.table th{
+    background-color: darkslategray;
+    color: white;
+}
+@media (max-width: 500px){
+    .table thead{
+        display: none;
+    }
+    .table, .table tbody, .table tr, .table td{
+        display: block;
+        width: 100%;
+    }
+    .table tr{
+        margin-bottom: 15px;
+    }
+    .table td{
+        text-align: right;
+        padding-left: 50%;
+        text-align: right;
+        position: relative;
+    }
+    .table td::before{
+
+        position: absolute;
+        left: 0;
+        width: 50%;
+        padding-left: 15px;
+        font-size: 15px;
+        font-weight: bold;
+        text-align: left;
+    }
+ }
+
+
 .containerbtn{
     margin-bottom: 15px;
 }
@@ -23,7 +63,7 @@
     color: white;
     font-size: 1rem;
     border-radius: 5px;
-    background-color: violet;
+    background-color: darkslategray;
     margin-bottom: 5px;
     outline: none;
     cursor: pointer;
