--- a/src/components/addEmploye.module.css
+++ b/src/components/addEmploye.module.css
@@ -1,4 +1,55 @@
-.container{
+
+.contenedor{
+    background-color: whitesmoke;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .card__title{
+    text-align: center;
+  }
+  .card{
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 15px;
+    border: 1px solid black;
+    margin-right: 15px;
+    margin-left: 15px;
+  }
+  .card__field input{
+    width: 100%;
+    padding: 10px;
+  }
+  .container_btn{
+      display: flex;
+      gap: 15px;
+  }
+  .btn_s{
+    padding: 10px;
+    background: green;
+    font-size: 1rem;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+  }
+  .btn_c{
+    padding: 10px;
+    background: red;
+    font-size: 1rem;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+  }
+
+/* .container{
     max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
@@ -59,4 +110,4 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
-}
+} */
